Agregando el Framework Bootstrap y personalización de la App

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,3 +1,4 @@
-
+<div class="jumbotron">
 <h1>Bienvenido a Epistemarje</h1>
-<p>Registrate <a href="#"></a></p>
+<p>Registrate <a class="btn btn-primary" href="#" role="button">aquí</a></p>
+</div>
