Mejorando el diseño

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,4 +1,7 @@
-<div class="jumbotron">
-<h1>Bienvenido a Epistemarje</h1>
-<p>Registrate <a class="btn btn-primary" href="#" role="button">aquí</a></p>
+<div class="jumbotron center">
+	<h1>Bienvenido a Epistemarje</h1>
+	<p>
+		<%=link_to "Iniciar Sesión", "#", class:"btn btn-primary btn-lg" %>
+		<%=link_to "Regístrate", "#", class:"btn btn-primary btn-lg" %>
+	</p>
 </div>
