--- a/app/assets/stylesheets/bootstrap_application.css.scss
+++ b/app/assets/stylesheets/bootstrap_application.css.scss
@@ -1,1 +1,10 @@
+@import url(https://fonts.googleapis.com/css?family=Lato:400,700);
+
+$font-family-sans-serif:"Lato","Helvetica Neue", Helvetica, Arial, sans-serif;
+$navbar-default-bg:white;
+
 @import 'bootstrap';
+
+.center{
+	text-align:center;
+}
