Agregando página de registro

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,7 +1,8 @@
 <div class="jumbotron center">
-	<h1>Bienvenido a Epistemarje</h1>
+	<h1>Bienvenido a Episteme Arjé</h1>
 	<p>
 		<%=link_to "Iniciar Sesión", "#", class:"btn btn-primary btn-lg" %>
-		<%=link_to "Regístrate", "#", class:"btn btn-primary btn-lg" %>
+		<%=link_to "Regístrate", signup_path, class:"btn btn-primary btn-lg" %>
+
 	</p>
 </div>
