--- a/app/assets/stylesheets/pages.scss
+++ b/app/assets/stylesheets/pages.scss
@@ -1,3 +1,112 @@
 // Place all the styles related to the pages controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+/*Style Sigup*/
+@CHARSET "UTF-8";
+
+* {
+	-webkit-box-sizing: border-box;
+	   -moz-box-sizing: border-box;
+	        box-sizing: border-box;
+	outline: none;
+}
+
+.signup{
+	float:right;
+	max-width:440px;
+	border: 1px solid #e4e4e4 !important;
+	border-radius:10px;
+	padding-top:15px;
+	background:#2980b9;
+
+}
+
+.welcomeuser{
+	float:left;
+	max-width: 700px;
+	radius: 2px;
+	/*border: 1px solid #e4e4e4 !important;*/
+	margin:0px;
+	padding:50px 100px 0px 100px;
+}
+
+.welcomeuser h2{
+		font-size:3em;
+}
+
+.prhase{
+	border: 1px solid;
+	max-width:300px;
+	margin:50px 0px 50px 0px;
+	padding:10px;
+	font-size:1.5em;
+	border-radius:10px;
+
+}
+
+.login-form {
+	max-width: 390px;
+	radius: 2px;
+	align:center;
+	margin:10px;
+	position:static;
+	}
+
+
+
+.login-form .panel {
+	border: 1px solid #e4e4e4 !important;
+	border-radius: 5px !important;
+	-moz-border-radius: 5px;
+	-webkit-border-radius: 5px;
+}
+	.login-form .panel a {
+		color: #00aeef;
+	}
+	.login-form .panel .panel-body {
+		padding: 18px 40px 30px 40px !important;
+	}
+	.login-form .panel .panel-footer {
+		line-height: 2em;
+		padding: 30px 40px 30px 40px !important;
+		background: #f6f6f6 !important;
+		color: #606060 !important;
+	}
+form[role=login] {
+	font: 16px/2.6em Lato, serif;
+	color: #909090;
+}	
+	form[role=login] h2 {
+		font-size: 34px;
+		color: #000;
+		margin-bottom: 1em;
+	}
+	form[role=login] input,
+	form[role=login] select,
+	form[role=login] button {
+		font-size: 16px;
+	}
+	form[role=login] input.form-control,
+	form[role=login] select {
+		height: 2.2em;		
+	}
+	form[role=login] select {
+		padding: 8px 12px;
+		height: 40px;
+	}
+		form[role=login] input::-webkit-input-placeholder {
+			color: #bbb;
+		}
+		form[role=login] input:-moz-placeholder {
+			color: #bbb;
+		}
+		form[role=login] input::-moz-placeholder {
+			color: #bbb;
+		}
+		form[role=login] input:-ms-input-placeholder {  
+			color: #bbb;
+		}
+	form[role=login] button {
+		font-size: 16px;
+	}
