--- a/app/assets/stylesheets/pages.scss
+++ b/app/assets/stylesheets/pages.scss
@@ -22,13 +22,16 @@
 
 }
 
+
 .welcomeuser{
+	background-image: url("https://pixabay.com/static/uploads/photo/2015/10/12/14/50/calculator-983900_960_720.jpg");	
 	float:left;
 	max-width: 700px;
-	radius: 2px;
+	border-radius: 5px;
 	/*border: 1px solid #e4e4e4 !important;*/
 	margin:0px;
 	padding:50px 100px 0px 100px;
+
 }
 
 .welcomeuser h2{
