--- a/app/views/pages/signup.html.erb
+++ b/app/views/pages/signup.html.erb
@@ -1,57 +1,58 @@
+<div class="fondosignup container">
+  <div class="welcomeuser">
+        <div>
+          <h2 style="text-align:center;">Episteme Arj&eacute</h2>
+        </div>
+        <div class="prhase"style="text-align:center;">
+          <p>"Para desembarcar en la isla de la sabiduría hay que navegar en un océano de aflicciones"</p>
+          <p>- S&oacutecrates -</p>
 
-<div class="welcomeuser">
-      <div>
-        <h2 style="text-align:center;">Episteme Arj&eacute</h2>
-      </div>
-      <div class="prhase"style="text-align:center;">
-        <p>"Para desembarcar en la isla de la sabiduría hay que navegar en un océano de aflicciones"</p>
-        <p>- S&oacutecrates -</p>
-
-      </div>
-</div>
-  <div class="signup">
-      <section class="container" >
-            <section class="login-form">
-
-            <div class="panel panel-default">
-              <form method="post" action="" role="login">
-                <div class="panel-body">
-                      <h2 style="text-align:center;">Registro</h2>
-                      <div class="input-group form-group">
-                        <span class="input-group-addon"><i class="glyphicon glyphicon-user"></i></span>
-                      <input type="text" name="username" placeholder="Nombre de usuario" required class="form-control" />
-                    </div>
-                    <div class="input-group form-group">
-                      <span class="input-group-addon"><i class="glyphicon glyphicon-envelope"></i></span>
-                      <input type="text" name="email" placeholder="Email" required class="form-control" />
-                    </div>
-
-                    <div class="input-group form-group">
-                        <span class="input-group-addon"><i class="glyphicon glyphicon-user"></i></span>
-                      <input type="text" name="username" placeholder="Universidad o Colegio" required class="form-control" />
-                    </div>
-
-                    <div class="input-group form-group">
-                        <span class="input-group-addon"><i class="glyphicon glyphicon-user"></i></span>
-                      <input type="text" name="username" placeholder="Grado o Semestre" required class="form-control" />
-                    </div>
-                    
-                    <div class="input-group form-group">
-                      <span class="input-group-addon"><i class="glyphicon glyphicon-lock"></i></span>
-                      <input type="password" name="password" placeholder="Contraseña" required class="form-control" />
-                    </div>
-                    <div class="input-group form-group">
-                      <span class="input-group-addon"><i class="glyphicon glyphicon-lock"></i></span>
-                      <input type="password" name="password" placeholder="Repite la contraseña" required class="form-control" />
-                    </div>
-                    <input type="checkbox" name="remember" value="1" /> I agree to <a href="#">terms</a> and <a href="#">privacy</a>
-                </div>
-                <div class="panel-footer">
-                  <button type="submit" name="go" class="btn btn-lg btn-block btn-primary">Inscribeme!</button>
-                </div>
-              </form>
-            </div>
-          
-          </section>
-        </section>
+        </div>
   </div>
+    <div class="signup">
+        <section class="container" >
+              <section class="login-form">
+
+              <div class="panel panel-default">
+                <form method="post" action="" role="login">
+                  <div class="panel-body">
+                        <h2 style="text-align:center;">Registro</h2>
+                        <div class="input-group form-group">
+                          <span class="input-group-addon"><i class="glyphicon glyphicon-user"></i></span>
+                        <input type="text" name="username" placeholder="Nombre de usuario" required class="form-control" />
+                      </div>
+                      <div class="input-group form-group">
+                        <span class="input-group-addon"><i class="glyphicon glyphicon-envelope"></i></span>
+                        <input type="text" name="email" placeholder="Email" required class="form-control" />
+                      </div>
+
+                      <div class="input-group form-group">
+                          <span class="input-group-addon"><i class="glyphicon glyphicon-user"></i></span>
+                        <input type="text" name="username" placeholder="Universidad o Colegio" required class="form-control" />
+                      </div>
+
+                      <div class="input-group form-group">
+                          <span class="input-group-addon"><i class="glyphicon glyphicon-user"></i></span>
+                        <input type="text" name="username" placeholder="Grado o Semestre" required class="form-control" />
+                      </div>
+                      
+                      <div class="input-group form-group">
+                        <span class="input-group-addon"><i class="glyphicon glyphicon-lock"></i></span>
+                        <input type="password" name="password" placeholder="Contraseña" required class="form-control" />
+                      </div>
+                      <div class="input-group form-group">
+                        <span class="input-group-addon"><i class="glyphicon glyphicon-lock"></i></span>
+                        <input type="password" name="password" placeholder="Repite la contraseña" required class="form-control" />
+                      </div>
+                      <input type="checkbox" name="remember" value="1" /> I agree to <a href="#">terms</a> and <a href="#">privacy</a>
+                  </div>
+                  <div class="panel-footer">
+                    <button type="submit" name="go" class="btn btn-lg btn-block btn-primary">Inscribeme!</button>
+                  </div>
+                </form>
+              </div>
+            
+            </section>
+          </section>
+    </div>
+</div>
