--- a/app/views/pages/signup.html.erb
+++ b/app/views/pages/signup.html.erb
@@ -1,4 +1,4 @@
-<div class="fondosignup container">
+<div class="fondosignup">
   <div class="welcomeuser">
         <div>
           <h2 style="text-align:center;">Episteme Arj&eacute</h2>
