--- a/app/assets/stylesheets/pages.scss
+++ b/app/assets/stylesheets/pages.scss
@@ -12,8 +12,19 @@
 	outline: none;
 }
 
+@media screen and (min-width:1200px)
+{
+.welcomeuser{
+		
+	float:left;
+	width: 700px;
+	border-radius: 2px;
+	/*border: 1px solid #e4e4e4 !important;*/
+	margin:0px;
+	padding:50px 100px 0px 100px;
+}
 .signup{
-	float:right;
+	float:left;
 	max-width:440px;
 	border: 1px solid #e4e4e4 !important;
 	border-radius:10px;
@@ -22,33 +33,6 @@
 
 }
 
-.fondosignup{
-	background: url("https://pixabay.com/static/uploads/photo/2015/10/12/14/50/calculator-983900_960_720.jpg") no-repeat;
-
-  /* Set rules to fill background */
-  min-height: 100%;
-  min-width: 100%;
-	
-  /* Set up proportionate scaling */
-  width: 100%;
-  height: auto;
-	
-  /* Set up positioning */
-  position: block;
-  left: 0;
-}
-
-
-.welcomeuser{
-		
-	float:left;
-	max-width: 700px;
-	border-radius: 2px;
-	/*border: 1px solid #e4e4e4 !important;*/
-	margin:0px;
-	padding:50px 100px 0px 100px;
-
-}
 
 .welcomeuser h2{
 		font-size:3em;
@@ -131,3 +115,24 @@ form[role=login] {
 	form[role=login] button {
 		font-size: 16px;
 	}
+
+};
+@media screen and (min-width:900px){
+	
+}
+
+@media screen and (min-width:768px){
+	
+}
+
+@media screen and (min-width:600px){
+	
+}
+
+@media screen and (min-width:480px){
+	
+}
+
+@media screen and (min-width:320px){
+	
+}
