--- a/app/assets/stylesheets/pages.scss
+++ b/app/assets/stylesheets/pages.scss
@@ -18,11 +18,8 @@
 		
 	float:left;
 	width: 700px;
-	border-radius: 2px;
-	/*border: 1px solid #e4e4e4 !important;*/
-	margin:0px;
-	padding:50px 100px 0px 100px;
 }
+
 .signup{
 	float:left;
 	max-width:440px;
@@ -41,12 +38,12 @@
 
 .prhase{
 	border: 1px solid;
-	max-width:300px;
-	margin:50px 0px 50px 0px;
+	width:400px;
 	padding:10px;
 	font-size:1.5em;
 	border-radius:10px;
 	background:white;
+	text-align:center;
 
 }
 
