--- a/app/views/pages/signup.html.erb
+++ b/app/views/pages/signup.html.erb
@@ -3,7 +3,7 @@
         <div>
           <h2 style="text-align:center;">Episteme Arj&eacute</h2>
         </div>
-        <div class="prhase"style="text-align:center;">
+        <div class="prhase container">
           <p>"Para desembarcar en la isla de la sabiduría hay que navegar en un océano de aflicciones"</p>
           <p>- S&oacutecrates -</p>
 
