--- a/app/assets/stylesheets/pages.scss
+++ b/app/assets/stylesheets/pages.scss
@@ -14,28 +14,26 @@
 
 @media screen and (min-width:1200px)
 {
+
+/*---------------_header------------------------------*/
+
+/*---------------Inicio-------------------------------*/
+
+
+
+/* --------------Signup-------------------------------*/
 .welcomeuser{
 		
 	float:left;
-	width: 700px;
-}
-
+	width: 700px;}
 .signup{
 	float:left;
 	max-width:440px;
 	border: 1px solid #e4e4e4 !important;
 	border-radius:10px;
 	padding-top:15px;
-	background:#2980b9;
-
-}
-
-
-.welcomeuser h2{
-		font-size:3em;
-
-}
-
+	background:#2980b9;}
+.welcomeuser h2{font-size:3em;}
 .prhase{
 	border: 1px solid;
 	width:400px;
@@ -43,10 +41,7 @@
 	font-size:1.5em;
 	border-radius:10px;
 	background:white;
-	text-align:center;
-
-}
-
+	text-align:center;}
 .login-form {
 	max-width: 390px;
 	radius: 2px;
@@ -54,15 +49,11 @@
 	margin:10px;
 	position:static;
 	}
-
-
-
 .login-form .panel {
 	border: 1px solid #e4e4e4 !important;
 	border-radius: 5px !important;
 	-moz-border-radius: 5px;
-	-webkit-border-radius: 5px;
-}
+	-webkit-border-radius: 5px; }
 	.login-form .panel a {
 		color: #00aeef;
 	}
@@ -77,26 +68,19 @@
 	}
 form[role=login] {
 	font: 16px/2.6em Lato, serif;
-	color: #909090;
-}	
+	color: #909090; }	
 	form[role=login] h2 {
 		font-size: 34px;
 		color: #000;
-		margin-bottom: 1em;
-	}
+		margin-bottom: 1em; }
 	form[role=login] input,
 	form[role=login] select,
-	form[role=login] button {
-		font-size: 16px;
-	}
+	form[role=login] button { font-size: 16px;}
 	form[role=login] input.form-control,
-	form[role=login] select {
-		height: 2.2em;		
-	}
+	form[role=login] select { height: 2.2em;}
 	form[role=login] select {
 		padding: 8px 12px;
-		height: 40px;
-	}
+		height: 40px; }
 		form[role=login] input::-webkit-input-placeholder {
 			color: #bbb;
 		}
@@ -109,11 +93,11 @@ form[role=login] {
 		form[role=login] input:-ms-input-placeholder {  
 			color: #bbb;
 		}
-	form[role=login] button {
-		font-size: 16px;
-	}
+	form[role=login] button { font-size: 16px; }
+
 
 };
+
 @media screen and (min-width:900px){
 	
 }
