Nav_bar arreglada, modificando home..

--- a/app/assets/stylesheets/pages.scss
+++ b/app/assets/stylesheets/pages.scss
@@ -17,11 +17,15 @@
 
 /*---------------_header------------------------------*/
 
-/*---------------Inicio-------------------------------*/
 
+/*---------------home---------------------------------*/
+.buscinicio{
+	witdh:400px;
+}
 
+/* --------------login--------------------------------*/
 
-/* --------------Signup-------------------------------*/
+/* --------------signup-------------------------------*/
 .welcomeuser{
 		
 	float:left;
