--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -15,15 +15,17 @@
       <ul class="nav navbar-nav navbar-right">
         <li><%=link_to "Inicio", root_path%></li>
         <li><%=link_to "Nosotros", about_path%></li>
-        <li class="hbtn">
-            <%= link_to signup_path do %>
-              <button type="button" class="btn btn-primary btn-sm">Log in</button>
+        <li >
+           <p class="hbtn">
+            <%= link_to login_path do %>
+              <button type="button" class="btn btn-primary">Log in</button>
             <% end %>
-        </li>
-        <li class="hbtn">
+        
+      
             <%= link_to signup_path do %>
-              <button type="button" class="btn btn-default btn-sm">Reg&iacutestrate</button>
+              <button type="button" class="btn btn-default">Reg&iacutestrate</button>
             <% end %>
+            <p>
         </li>
       </ul>
     </div><!-- /.navbar-collapse -->
