--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,7 +1,17 @@
-<div class="jumbotron center">
-	<h1>Bienvenido a Episteme Arjé</h1>
+<div >
+	<h1>Bienvenido a Episteme Arj&eacute</h1>
+	<div>
+      <form class="#" role="search">
+        <div class="buscinicio">
+
+          <input type="text" class="homebuscador" placeholder="¿Qu&eacute quieres aprender hoy?" style="width: 605px">
+          <button type="submit" class="btn btn-default">Submit</button>
+        </div>
+      </form>
+	</div>
+      
 	<p>
-		<%=link_to "Iniciar Sesión", "#", class:"btn btn-primary btn-lg" %>
+		<%=link_to "Iniciar Sesión", login_path, class:"btn btn-primary btn-lg" %>
 		<%=link_to "Regístrate", signup_path, class:"btn btn-primary btn-lg" %>
 
 	</p>
