--- a/app/views/pages/signup.html.erb
+++ b/app/views/pages/signup.html.erb
@@ -1,13 +1,17 @@
 <div class="fondosignup">
   <div class="welcomeuser">
-        <div>
+      <div class="wmargin">
+        <div class="titulosignup">
           <h2 style="text-align:center;">Episteme Arj&eacute</h2>
+          <p>"El Principio de la Ciencia"</p>
         </div>
         <div class="prhase container">
           <p>"Para desembarcar en la isla de la sabiduría hay que navegar en un océano de aflicciones"</p>
           <p>- S&oacutecrates -</p>
 
         </div>
+      </div>
+      </div>
   </div>
     <div class="signup">
         <section class="container" >
@@ -16,7 +20,9 @@
               <div class="panel panel-default">
                 <form method="post" action="" role="login">
                   <div class="panel-body">
-                        <h2 style="text-align:center;">Registro</h2>
+                      <div class="Rsignup">
+                        <h2 style="text-align:center;"><strong>Registro</strong></h2>
+                      </div>
                         <div class="input-group form-group">
                           <span class="input-group-addon"><i class="glyphicon glyphicon-user"></i></span>
                         <input type="text" name="username" placeholder="Nombre de usuario" required class="form-control" />
