--- a/app/assets/stylesheets/bootstrap_application.css.scss
+++ b/app/assets/stylesheets/bootstrap_application.css.scss
@@ -1,5 +1,11 @@
 @import url(https://fonts.googleapis.com/css?family=Lato:400,700);
 
+@import url(https://fonts.googleapis.com/css?family=Lobster);
+
+@import url(https://fonts.googleapis.com/css?family=Indie+Flower);
+
+@import url(https://fonts.googleapis.com/css?family=Pacifico);
+
 $font-family-sans-serif:"Lato","Helvetica Neue", Helvetica, Arial, sans-serif;
 $navbar-default-bg:white;
 
