font glyphicons, don't work

--- a/app/assets/stylesheets/bootstrap_application.css.scss
+++ b/app/assets/stylesheets/bootstrap_application.css.scss
@@ -4,6 +4,12 @@
 
 @import url(https://fonts.googleapis.com/css?family=Indie+Flower);
 
+@font-face {
+  font-family: 'Glyphicons Halflings';
+ 
+  src: url('../fonts/glyphicons-halflings-regular.eot');
+}
+
 @import url(https://fonts.googleapis.com/css?family=Pacifico);
 
 $font-family-sans-serif:"Lato","Helvetica Neue", Helvetica, Arial, sans-serif;
