--- a/app/views/pages/signup.html.erb
+++ b/app/views/pages/signup.html.erb
@@ -33,12 +33,12 @@
                       </div>
 
                       <div class="input-group form-group">
-                          <span class="input-group-addon"><i class="glyphicon glyphicon-user"></i></span>
+                          <span class="input-group-addon"><i class="glyphicon glyphicon-education"></i></span>
                         <input type="text" name="username" placeholder="Universidad o Colegio" required class="form-control" />
                       </div>
 
                       <div class="input-group form-group">
-                          <span class="input-group-addon"><i class="glyphicon glyphicon-user"></i></span>
+                          <span class="input-group-addon"><i class="glyphicon glyphicon-apple"></i></span>
                         <input type="text" name="username" placeholder="Grado o Semestre" required class="form-control" />
                       </div>
                       
