--- a/app/views/pages/signup.html.erb
+++ b/app/views/pages/signup.html.erb
@@ -1,3 +1,11 @@
+<style type="text/css">
+  body{
+    background-image: url("/assets/boat.jpg");
+    background-size: 100%;
+    background-repeat: no-repeat;
+  }
+</style>
+
 <div class="fondosignup">
   <div class="welcomeuser">
       <div class="wmargin">
