--- a/app/views/pages/login.html.erb
+++ b/app/views/pages/login.html.erb
@@ -4,23 +4,48 @@
     background-size: 100%;}
 
 </style>
+	<div class="container">
+		<div class="lmargin">
+			<div class="lwuser">
+				<div>
+				<h3><strong>¡BIENVENIDO DE NUEVO!</strong></h3>
+				</div>
+			</div>
+				<div class="titulosignup">
+		          <h2 style="text-align:center;">Episteme Arj&eacute</h2>
+		          <p>"El Principio de la Ciencia"</p>
+	          	</div>
+	        
+				<div>
+					
+				</div>
+				<div>
+					
+				</div>
+			
 
-<form>
-  <div class="form-group">
-    <label for="exampleInputEmail1">Email address</label>
-    <input type="email" class="form-control" id="exampleInputEmail1" placeholder="Email">
-  </div>
-  <div class="form-group">
-    <label for="exampleInputPassword1">Password</label>
-    <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
-  </div>
-  <div class="form-group">
-    <p class="help-block">Example block-level help text here.</p>
-  </div>
-  <div class="checkbox">
-    <label>
-      <input type="checkbox"> Check me out
-    </label>
-  </div>
-  <button type="submit" class="btn btn-default">Iniciar Sesión</button>
-</form>
+			<div>
+			<form>
+			  <div class="input-group form-group">
+                          <span class="input-group-addon"><i class="glyphicon glyphicon-user"></i></span>
+                        <input type="text" name="username" placeholder="Nombre de usuario" required class="form-control" />
+                      </div>
+			  <div class="input-group form-group">
+                        <span class="input-group-addon"><i class="glyphicon glyphicon-lock"></i></span>
+                        <input type="password" name="password" placeholder="Contraseña" required class="form-control" />
+                      </div>
+			  <div class="form-group">
+			    <p class="help-block">Restablecer Contraseña</p>
+			  </div>
+			  <div class="checkbox">
+			    <label>
+			      <input type="checkbox"> Recordar mis datos
+			    </label>
+			  </div >
+			  <div id="inon">
+			  <button type="button" class="btn btn-primary btn-block"><p id="pbottom"><strong>INICIAR SESIÓN</strong><p></button>
+			</div>
+			</form>
+			<div>
+		</div>
+	</div>
