Modificando font login

--- a/app/views/pages/login.html.erb
+++ b/app/views/pages/login.html.erb
@@ -3,11 +3,12 @@
     background-image: url("/assets/library.jpg");
     background-size: 100%;}
 
+
 </style>
 	<div class="container">
 		<div class="lmargin">
 			<div class="lwuser">
-				<div>
+				<div class="lwelcome">
 				<h3><strong>¡BIENVENIDO DE NUEVO!</strong></h3>
 				</div>
 			</div>
