--- a/app/assets/stylesheets/bootstrap_application.css.scss
+++ b/app/assets/stylesheets/bootstrap_application.css.scss
@@ -6,6 +6,8 @@
 
 @import url(https://fonts.googleapis.com/css?family=Pacifico);
 
+@import url(https://fonts.googleapis.com/css?family=Permanent+Marker);
+
 $font-family-sans-serif:"Lato","Helvetica Neue", Helvetica, Arial, sans-serif;
 $navbar-default-bg:white;
 
@@ -16,8 +18,4 @@ $navbar-default-bg:white;
 	text-align:center;
 }
 
-@font-face {
-  font-family: 'Glyphicons Halflings';
-  src: url('/assets/glyphicons-halflings-regular.eot');
-  src: url('/assets/glyphicons-halflings-regular.eot?#iefix') format('embedded-opentype'), url('/assets/glyphicons-halflings-regular.woff') format('woff'), url('/assets/glyphicons-halflings-regular.ttf') format('truetype'), url('/assets/glyphicons-halflings-regular.svg#glyphicons_halflingsregular') format('svg');
-}
+
