--- a/app/assets/stylesheets/pages.scss
+++ b/app/assets/stylesheets/pages.scss
@@ -12,6 +12,11 @@
 	outline: none;
 }
 
+
+
+
+
+
 @media screen and (min-width:1200px)
 {
 
@@ -20,7 +25,7 @@
 
 /*---------------home---------------------------------*/
 .buscinicio{
-	witdh:400px;
+	width:400px;
 }
 
 /* --------------login--------------------------------*/
@@ -45,8 +50,7 @@ body
 .lwuser{
 	background:RGB(255,217,102);
 	text-align:center;
-	-webkit-text-fill-color:RGB(255,217,102) ;
-	-webkit-text-stroke: 1.5px RGB(237,125,49);
+	color:orange;
 	border:2px solid black;
 	border-radius:4px;
 	height:50px;
@@ -57,6 +61,9 @@ body
 	margin:auto;
 	margin-top:-10px;
 }
+  .lwelcome{
+  	font-family:'Permanent Marker';
+  }
 
 
 /* --------------signup-------------------------------*/
