--- a/app/assets/stylesheets/pages.scss
+++ b/app/assets/stylesheets/pages.scss
@@ -168,6 +168,52 @@ form[role=login] {
 		}
 	form[role=login] button { font-size: 16px; }
 
+/* --------------library-------------------------------*/
+
+		.stand{
+			background-color: 	#a9855d;
+			border-collapse:collapse;
+			border-bottom:5px solid #c2996b;
+		}
+
+		.standup{
+			border-top:5px solid #c2996b;
+			border-left:5px solid #c2996b;
+			border-right:5px solid #c2996b;
+		}
+		.standown{
+
+			border-left:5px solid #c2996b;
+			border-right:5px solid #c2996b;
+			border-botom:5px solid #c2996b;
+
+		}
+		.standsign{
+			width: 131px; 
+			text-align:center; 
+			background:#D2010B;
+			color:white;
+			border:solid 3px black;
+			font-family:lobster;
+			font-size: 1.5em;
+		}
+
+		.standbook{
+			height: 120px;
+		}
+
+		.bookin1{
+			position:relative;
+			float:left;
+			width:50px;
+			margin:0px;
+		}
+		.bookin{
+			position:relative;
+			float:left;
+			margin-left:-12px;
+		}
+
 
 };
 
