--- a/app/views/pages/library.html.erb
+++ b/app/views/pages/library.html.erb
@@ -1,49 +1,61 @@
-	<table class="stand" style="width: 700px; height: 233px">
-		<tr class="standup">
-			<td>&nbsp;</td>
-			<td>&nbsp;</td>
-			<td class="standsign"><span lang="es-co">Matemáticas</span></td>
-			<td>&nbsp;</td>
-			<td>&nbsp;</td>
-		</tr>
-		<tr class="standown">
-			<td class="standbook" colspan="5">
-				<div class="bookin1">
-					<img src="/assets/algebra.png">
-				</div>
-				
-				<div class="bookin">
-					<img src="/assets/calculo1.png">
-				</div>
+<style type="text/css">
+  body{
+    background-image: url("/assets/@query-1200px/study.jpg");
+    background-size: 100%;
+	z-index: -10;
+	background-repeat: no-repeat;
+	}
+</style>
+
+
+	<div class="library">
+		<table class="stand">
+			<tr class="standup">
+				<td>&nbsp;</td>
+
+				<td class="standsign"><span lang="es-co">Matemáticas</span></td>
+
+				<td>&nbsp;</td>
+			</tr>
+			<tr class="standown">
+				<td class="standbook" colspan="3">
+					<div class="bookin1">
+						<img src="/assets/@query-1200px/algebra.png">
+					</div>
+					
+					<div class="bookin">
+						<img src="/assets/@query-1200px/calculo1.png">
+					</div>
 
 
 
-				<div class="bookin">
-				</div>
+					<div class="bookin">
+					</div>
 
-			</td>
-		</tr>
-		<tr class="standup">
-			<td>&nbsp;</td>
-			<td>&nbsp;</td>
-			<td class="standsign">Química</td>
-			<td>&nbsp;</td>
-			<td>&nbsp;</td>
-		</tr>
-		<tr class="standown">
-			<td class="standbook" colspan="5">
+				</td>
+			</tr>
+			<tr class="standup">
+				<td>&nbsp;</td>
+				<td class="standsign">Química</td>
+				<td>&nbsp;</td>
+			</tr>
+			<tr class="standown">
+				<td class="standbook" colspan="3">
 
-			</td>
-		</tr>
-		<tr class="standup">
-			<td>&nbsp;</td>
-			<td>&nbsp;</td>
-			<td class="standsign">Física</td>
-			<td>&nbsp;</td>
-			<td>&nbsp;</td>
-		</tr>
-		<tr class="standown">
-			<td class="standbook" colspan="5">&nbsp;</td>
-		</tr>
+				</td>
+			</tr>
+			<tr class="standup">
+				<td>&nbsp;</td>
+				<td class="standsign">Física</td>
+				<td>&nbsp;</td>
+			</tr>
+			<tr class="standown">
+				<td class="standbook" colspan="3">&nbsp;</td>
+			</tr>
 
-	</table>
+		</table>
+	</div>
+	
+	<div class="desk">
+		<img src="">
+	</div>
