--- a/app/views/pages/login.html.erb
+++ b/app/views/pages/login.html.erb
@@ -1,6 +1,6 @@
 <style type="text/css">
   body{
-    background-image: url("/assets/library.jpg");
+    background-image: url("/assets/@query-1200px/library.jpg");
     background-size: 100%;}
 
 
