--- a/app/views/pages/signup.html.erb
+++ b/app/views/pages/signup.html.erb
@@ -1,11 +1,11 @@
 <style type="text/css">
   body{
-    background-image: url("/assets/boat.jpg");
+    background-image: url("/assets/@query-1200px/boat.jpg");
     background-size: 100%;
-    background-repeat: no-repeat;
+      background-repeat: no-repeat;
   }
 </style>
-
+<div id="global">
 <div class="fondosignup">
   <div class="welcomeuser">
       <div class="wmargin">
@@ -69,4 +69,5 @@
             </section>
           </section>
     </div>
+</div>
 </div>
