--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,6 +1,5 @@
 <nav class="navbar navbar-default">
   <div class="container">
-    <!-- Brand and toggle get grouped for better mobile display -->
     <div class="navbar-header">
       <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
         <span class="sr-only">Toggle navigation</span>
@@ -15,7 +14,7 @@
       <ul class="nav navbar-nav navbar-right">
         <li><%=link_to "Inicio", root_path%></li>
         <li><%=link_to "Nosotros", about_path%></li>
-        <li><%=link_to "library", library_path%></li>
+        <li><%=link_to "Biblioteca", library_path%></li>
         <li >
            <p class="hbtn">
             <%= link_to login_path do %>
@@ -30,6 +29,7 @@
         </li>
       
       </ul>
-    </div><!-- /.navbar-collapse -->
-  </div><!-- /.container -->
-</nav>
+    </div>
+  </div>
+</nav> 
+
