biblioteca lista, falta retocar

--- a/app/views/pages/library.html.erb
+++ b/app/views/pages/library.html.erb
@@ -2,60 +2,66 @@
   body{
     background-image: url("/assets/@query-1200px/study.jpg");
     background-size: 100%;
-	z-index: -10;
 	background-repeat: no-repeat;
 	}
 </style>
 
+	<div class="glibrary">
+		<h1 class="h1library"><strong>¿Qué materia quieres aprender hoy?</strong></h1>
+		<div class="library">
+			<table class="stand">
+				<tr class="standup">
+					<td>&nbsp;</td>
 
-	<div class="library">
-		<table class="stand">
-			<tr class="standup">
-				<td>&nbsp;</td>
+					<td class="standsign"><span lang="es-co">Matemáticas</span></td>
 
-				<td class="standsign"><span lang="es-co">Matemáticas</span></td>
-
-				<td>&nbsp;</td>
-			</tr>
-			<tr class="standown">
-				<td class="standbook" colspan="3">
-					<div class="bookin1">
-						<img src="/assets/@query-1200px/algebra.png">
-					</div>
-					
-					<div class="bookin">
-						<img src="/assets/@query-1200px/calculo1.png">
-					</div>
+					<td>&nbsp;</td>
+				</tr>
+				<tr class="standown">
+					<td class="standbook" colspan="3">
+						
+						<div class="bookin1">
+							<a href=mostrar()><img title="algebra"src="/assets/@query-1200px/algebra.png"></a>
+						</div>
+						
+						<div class="bookin">
+							<img src="/assets/@query-1200px/calculo1.png">
+						</div>
 
 
 
-					<div class="bookin">
-					</div>
+						<div class="bookin">
+						</div>
 
-				</td>
-			</tr>
-			<tr class="standup">
-				<td>&nbsp;</td>
-				<td class="standsign">Química</td>
-				<td>&nbsp;</td>
-			</tr>
-			<tr class="standown">
-				<td class="standbook" colspan="3">
+					</td>
+				</tr>
+				<tr class="standup">
+					<td>&nbsp;</td>
+					<td class="standsign">Química</td>
+					<td>&nbsp;</td>
+				</tr>
+				<tr class="standown">
+					<td class="standbook" colspan="3">
 
-				</td>
-			</tr>
-			<tr class="standup">
-				<td>&nbsp;</td>
-				<td class="standsign">Física</td>
-				<td>&nbsp;</td>
-			</tr>
-			<tr class="standown">
-				<td class="standbook" colspan="3">&nbsp;</td>
-			</tr>
+					</td>
+				</tr>
+				<tr class="standup">
+					<td>&nbsp;</td>
+					<td class="standsign">Física</td>
+					<td>&nbsp;</td>
+				</tr>
+				<tr class="standown">
+					<td class="standbook" colspan="3">&nbsp;</td>
+				</tr>
 
-		</table>
+			</table>
+		</div>
 	</div>
-	
-	<div class="desk">
-		<img src="">
+	<div class="gldesk">
+		<div class="desk">
+				<img src="/assets/@query-1200px/asistente.png">
+				<h1>Dejame explicarte:</h1>
+				<p>Esta sección funciona como una biblioteca, pero digital, le das click al libro de la materia que desees y podrás ver el contenido que este tiene.</p>
+				<p>¡Fácil! ¿No? Vámos intentalo.</p>
+		</div>
 	</div>
