--- a/app/assets/stylesheets/pages.scss
+++ b/app/assets/stylesheets/pages.scss
@@ -33,13 +33,12 @@
 
 
 .lmargin{
-	width:360px;
+	width:350px;
 	margin:auto;
-	border:3px solid #2980b9;
+	border:3px solid rgba(41,128,185,0.6);
 	padding:15px;
 	border-radius:8px;
-	background:white;
-	opacity:0.9;
+	background:	rgba(255,250,250,0.6);
 }
 
 .lwuser{
@@ -76,8 +75,7 @@
 	margin:15%;
 	border: 1px solid #2980b9;
 	border-radius:10px;
-	opacity:0.95;
-	background:#2980b9;
+	background:rgba(41,128,185,0.7);
 	padding:3px;
 }
 .wmargin h2{
@@ -86,11 +84,11 @@
 
 .signup{
 	float:left;
-	width:440px;
+	width:426px;
 	border: 1px solid #2980b9 !important;
 	border-radius:8px;
 	padding-top:15px;
-	background:#2980b9;}
+	background:rgba(41,128,185,0.7);}
 
 .titulosignup h2{
 	font-size:4em;
@@ -110,6 +108,7 @@
 	border-radius:10px;
 	background:white;
 	text-align:center;}
+
 .Rsignup h2 {
 	font-family:Pacifico;
 }
@@ -117,7 +116,7 @@
 	width: 390px;
 	radius: 2px;
 	align:center;
-	margin:10px;
+	margin:3px;
 	position:static;
 	}
 .login-form .panel {
@@ -167,10 +166,67 @@ form[role=login] {
 	form[role=login] button { font-size: 16px; }
 
 /* --------------library-------------------------------*/
-		.library{
+		.gldesk{
 			position:relative;
-			float:left;
+			float:right;
+			width:690px;
+			height: 550px;
+			border:2px rgba(255,250,250,0.6) solid;
+			border-radius: 5px;
+			background-color: 	rgba(255,250,250,0.6);
+		}
+
+		.desk{
+			margin-top:10%;
+			margin-right: 15%;
+			margin-left:15%;
+			background-color: 	rgba(255,250,250,0.8);
+			width:490px;
+			height: 350px;
+			position: static;
+			padding: 50px;
+			border-radius:5px;
+		}
+
+		.desk img{
+			    float: left;
+			    margin: 10px;
+		}
+		.desk h1:first-child{
+			font-family: 1.6em;
+		}
+
+		.desk p h1{
+			    position: absolute;
+			    float:right;
+			    text-align: justify;
+		}
+		.desk h1{font-size: 1.5em;}
+		.desk p{font-size: 1.2em;}
+		
+		.glibrary{
+			text-align: center; 
+			background-color: 	rgba(255,250,250,0.6);
+			border-radius: 5px;
+			padding: 5px;
+			width: 433px; 
+			height: 550px;
+			position: relative;
+			float: left;
+			padding: 16px;
+			border:2px rgba(255,250,250,0.6) solid;
+		}
+		
+		.h1library{
+			margin-top:0;
+			margin-bottom: 7px;
+			font-size: 1.8em;
+			font-family: Lobster;
+		}
+
+		.library{
 			display:block;
+
 		}
 
 		.stand{
@@ -219,14 +275,8 @@ form[role=login] {
 			margin-left:-12px;
 		}
 
-		/*.desk{
-			position:relative;
-			float:right;
-			width:200px;
-			height: 466px;
-			background-image: url("/assets/@query-1200px/study.jpg");
-			border:2px black solid;
-		}*/
+
+
 
 
 };
