--- a/app/assets/stylesheets/pages.scss
+++ b/app/assets/stylesheets/pages.scss
@@ -192,17 +192,16 @@ form[role=login] {
 			    float: left;
 			    margin: 10px;
 		}
-		.desk h1:first-child{
-			font-family: 1.6em;
+		.desk h1{
+			font-size: 1.6em;
+			font-family: lobster;
+
 		}
 
-		.desk p h1{
-			    position: absolute;
-			    float:right;
-			    text-align: justify;
+		.desk p{
+			font-size: 1.2em;
+			text-align: justify;	
 		}
-		.desk h1{font-size: 1.5em;}
-		.desk p{font-size: 1.2em;}
 		
 		.glibrary{
 			text-align: center; 
@@ -249,6 +248,7 @@ form[role=login] {
 			border-botom:5px solid #c2996b;
 
 		}
+
 		.standsign{
 			width: 131px; 
 			text-align:center; 
@@ -274,6 +274,7 @@ form[role=login] {
 			float:left;
 			margin-left:-12px;
 		}
+
 
 
 
