--- a/app/views/pages/library.html.erb
+++ b/app/views/pages/library.html.erb
@@ -21,7 +21,7 @@
 					<td class="standbook" colspan="3">
 						
 						<div class="bookin1">
-							<a href=mostrar()><img title="algebra"src="/assets/@query-1200px/algebra.png"></a>
+							<a onclick="toggle_visibility('algebra')"><img title="algebra"src="/assets/@query-1200px/algebra.png"></a>
 						</div>
 						
 						<div class="bookin">
@@ -61,7 +61,9 @@
 		<div class="desk">
 				<img src="/assets/@query-1200px/asistente.png">
 				<h1>Dejame explicarte:</h1>
-				<p>Esta sección funciona como una biblioteca, pero digital, le das click al libro de la materia que desees y podrás ver el contenido que este tiene.</p>
-				<p>¡Fácil! ¿No? Vámos intentalo.</p>
+				<img style="width:60px;float:right"src="/assets/@query-1200px/asistente-ejemplo.png">
+				<p>Por ejemplo, si estas interesado en algún contenido del Álgebra solo es pararte en encima de él y darle click, como en la siguiente imagen -></p>
+				<br>
+				<p style="text-align:center;">¡Fácil! ¿No? Vámos intentalo.</p>
 		</div>
 	</div>
