--- a/app/assets/stylesheets/pages.scss
+++ b/app/assets/stylesheets/pages.scss
@@ -275,6 +275,21 @@ form[role=login] {
 			margin-left:-12px;
 		}
 
+		/*--- Algebra ----*/
+
+		#algebra {
+			float:right;
+			position:relative;
+			width: 700px;
+			height: 700px;
+			display:none;
+			background-color: white;
+
+
+		}
+
+
+
 
 
 
