--- a/app/views/pages/library.html.erb
+++ b/app/views/pages/library.html.erb
@@ -21,7 +21,7 @@
 					<td class="standbook" colspan="3">
 						
 						<div class="bookin1">
-							<a onclick="toggle_visibility('algebra')"><img title="algebra"src="/assets/@query-1200px/algebra.png"></a>
+							<a href="#" onclick="toggle_visibility('algebra')"><img title="algebra"src="/assets/@query-1200px/algebra.png"></a>
 						</div>
 						
 						<div class="bookin">
@@ -58,12 +58,14 @@
 		</div>
 	</div>
 	<div class="gldesk">
-		<div class="desk">
+		<div id="help"class="desk">
 				<img src="/assets/@query-1200px/asistente.png">
 				<h1>Dejame explicarte:</h1>
+				
 				<img style="width:60px;float:right"src="/assets/@query-1200px/asistente-ejemplo.png">
 				<p>Por ejemplo, si estas interesado en algún contenido del Álgebra solo es pararte en encima de él y darle click, como en la siguiente imagen -></p>
 				<br>
 				<p style="text-align:center;">¡Fácil! ¿No? Vámos intentalo.</p>
 		</div>
+		<iframe id="algebra" src="/indice/algebra.html"></iframe>
 	</div>
